tests/snapshots/run_wpt_conformance__trtx_split_float32_4D_tensor_array_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "split.https.any.js",
    "split float32 4D tensor array splits default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    splitInput: f32[12, 1, 1, 2];\n  }\n\n  nodes {\n    [splitOutput1, splitOutput2, splitOutput3, splitOutput4] = split(splitInput, axis=0, label=\"\");\n  }\n\n  outputs { splitOutput1; splitOutput2; splitOutput3; splitOutput4; }\n}\n",
        ),
    },
)
