tests/snapshots/run_wpt_conformance__trtx_split_float32_4D_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float32 4D tensor number splits default options",
    "trtx",
    "PASS",
)
