tests/snapshots/run_wpt_conformance__trtx_sqrt_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float16 1D tensor",
    "trtx",
    "PASS",
)
